--- a/assets/style.css
+++ b/assets/style.css
@@ -5,6 +5,32 @@
     font-family: sans-serif;
     
 }
+
+
+/* custom scrollbar */
+::-webkit-scrollbar {
+    width: 20px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: transparent !important;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
+  }
+
+
+
+
+
 /*
 html{
 
@@ -374,4 +400,12 @@ article
    margin-left: 5%;
    width: 90%;
    margin-top: 300px;
+}
+
+
+.spacescroll
+{
+    height: 60px;
+    width: 100%;
+    float: left;
 }
