--- a/assets/style.css
+++ b/assets/style.css
@@ -381,11 +381,70 @@ header
 
 
 
+.road
+{
+  
+  float: left;
+  width: 100%;
+  margin-top: 300px;
+  height: 100px;
+  align-items: center;
+  justify-content: center;
+
+  display: flex;
+}
+
+.asphalt
+{
+  position: absolute;
+  width: 120%;
+  height: 50px;
+  background: #444;
+  transform-style: preserve-3d;
+  transform-origin: bottom;
+  transform: perspective(50px) rotateX(10deg);
+}
+.asphalt::before
+{
+  content: '';
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left:0;
+  width: 100%;
+  height: 6px;
+  background: linear-gradient(90deg, #fff 0%, #fff 60%,
+   #444 60%, #444 100%);
+   background-size: 150px; /**/
+   animation: roadanimate 1.1s linear infinite;
+}
+
+.asphalt::after
+{
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 12px;
+  background: #222;
+  top: 100%;
+  transform-origin: top;
+
+}
 
 
+@keyframes roadanimate
+{
+  0%
+  {
+    background-position: 0;
+  }
+  100%
+  {
+    background-position: -150px;
+  }
+}
 
   
-
 
 
 
@@ -406,7 +465,7 @@ article
    float: left;
    margin-left: 5%;
    width: 90%;
-   margin-top: 300px;
+   margin-top: 50px;
 }
 
 
