--- a/assets/style.css
+++ b/assets/style.css
@@ -383,7 +383,7 @@ header
 
 .road
 {
-  
+  overflow-x: hidden;
   float: left;
   width: 100%;
   margin-top: 300px;
@@ -461,7 +461,7 @@ header
 
 article
 {
-    
+  overflow-x: hidden;
    float: left;
    margin-left: 5%;
    width: 90%;
