--- a/assets/style.css
+++ b/assets/style.css
@@ -390,14 +390,13 @@ header
   height: 100px;
   align-items: center;
   justify-content: center;
-
   display: flex;
 }
 
 .asphalt
 {
   position: absolute;
-  width: 120%;
+  width: 100%;
   height: 50px;
   background: #444;
   transform-style: preserve-3d;
@@ -432,6 +431,8 @@ header
 }
 
 
+
+
 @keyframes roadanimate
 {
   0%
@@ -445,8 +446,62 @@ header
 }
 
   
+.road img
+{
+  z-index: 9999;
+  width: 260px;
+  margin-top: -30px;
+  animation: caranimate 3.1s linear infinite;
+  transition: 1s;
+}
 
 
+@keyframes caranimate {
+  0% {
+    
+    transform: translatex(0px);
+  }
+  10% {
+    
+    transform: translatex(0px);
+  }
+  20% {
+    
+    transform: translatex(0px);
+  }
+  30% {
+    
+    transform: translatex(0px);
+  }
+  40% {
+    
+    transform: translatex(0px);
+  }
+  50% {
+    
+    transform: translatex(0px);
+  }
+  60% {
+    
+    transform: translatex(0px);
+  }
+  70% {
+    
+    transform: translatex(0px);
+  }
+  80% {
+    
+    transform: translatex(0px);
+  }
+  90% {
+    
+    transform: translatex(0px);
+  }
+  100% {
+    
+    transform: translatex(-20px);
+  }
+}
 
 
 .bg
