--- a/assets/style.css
+++ b/assets/style.css
@@ -451,51 +451,48 @@ header
   z-index: 9999;
   width: 260px;
   margin-top: -30px;
-  animation: caranimate 3.1s linear infinite;
+  animation: caranimate 10.1s linear infinite;
   transition: 1s;
+  margin-left: 10%;
 }
 
 
 @keyframes caranimate {
   0% {
     
-    transform: translatex(0px);
+    transform: translatex(-20px);
   }
   10% {
     
     transform: translatex(0px);
   }
-  20% {
-    
-    transform: translatex(0px);
-  }
   30% {
     
-    transform: translatex(0px);
+    transform: translatex(60px);
   }
   40% {
     
-    transform: translatex(0px);
+    transform: translatex(62px);
   }
   50% {
     
-    transform: translatex(0px);
+    transform: translatex(60px);
   }
   60% {
     
-    transform: translatex(0px);
+    transform: translatex(62px);
   }
   70% {
     
-    transform: translatex(0px);
+    transform: translatex(13px);
   }
   80% {
     
-    transform: translatex(0px);
+    transform: translatex(11px);
   }
   90% {
     
-    transform: translatex(0px);
+    transform: translatex(13px);
   }
   100% {
     
