--- a/assets/style.css
+++ b/assets/style.css
@@ -1,11 +1,11 @@
-*
-{
-    margin: 0 auto;
 
-    font-family: sans-serif;
-    
+
+*{
+margin: 0 auto;
+font-family: sans-serif;
+
+
 }
-
 
 /* custom scrollbar */
 ::-webkit-scrollbar {
@@ -43,6 +43,7 @@ body
     background-color: rgb(19, 19, 19);
     color: white;
     overflow-x: hidden;
+    
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
@@ -53,6 +54,7 @@ body
 .navbar {
     position: absolute;
     width: 100%;
+    
 }
 
 .nav-container {
@@ -257,6 +259,7 @@ header
     margin-top: 100px;
     max-height: 600px;
     min-height: 500px;
+    overflow-x: hidden;
 }
 
 .headertext
@@ -518,6 +521,7 @@ article
    margin-left: 5%;
    width: 90%;
    margin-top: 50px;
+   overflow-x: hidden;
 }
 
 
