--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,9 @@
 
 
-*{
+*
+{
 margin: 0 auto;
 font-family: sans-serif;
-overflow-x: hidden;
 
 
 }
@@ -28,7 +28,10 @@ overflow-x: hidden;
     background-color: #a8bbbf;
   }
 
-
+* :not(body, .bg, .navbar, .nav-container, .hamburger-lines,.logo)
+{
+  overflow: hidden;
+}
 
 
 
@@ -400,7 +403,7 @@ header
 .asphalt
 {
   position: absolute;
-  width: 100%;
+  width: 120%;
   height: 50px;
   background: #292929;
   transform-style: preserve-3d;
