--- a/assets/style.css
+++ b/assets/style.css
@@ -94,7 +94,7 @@ body
 }
 
 .navbar .nav-container a:hover{
-    transition: 0.2s ease-in-out;
+    transition: 0.15s ease-in-out;
     background-color: rgb(0, 10, 22);
     letter-spacing: 1px;
     border: 2px rgb(0, 84, 179) solid;
@@ -409,7 +409,7 @@ header
   transform-style: preserve-3d;
   transform-origin: bottom;
   transform: perspective(50px) rotateX(10deg);
-  box-shadow: 0 15px 25px 0px rgba(0, 0, 0, 0.6);;
+  box-shadow: 0 15px 35px 0px rgba(10, 10, 10, 0.6);
 }
 .asphalt::before
 {
@@ -434,7 +434,7 @@ header
   height: 12px;
   background: #1b1b1b;
   top: 100%;
-  transform-origin: top;
+  transform-origin:top;
 
 }
 
@@ -526,7 +526,6 @@ article
    margin-left: 5%;
    width: 90%;
    margin-top: 10px;
-   overflow-x: hidden;
 }
 
 
@@ -539,20 +538,276 @@ article
 
 .about
 {
-  background-color: rgb(18, 8, 8);
+  background-image: linear-gradient(to bottom, rgba(19, 19, 19, 1), rgba(19, 19, 19, 0), rgba(19, 19, 19, 1)), url(/assets/img/bg1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  min-height: 600px;
   width: 100%;
   left: 0%;
   height: 100%;
   position: absolute;
+
 }
+
+p
+{
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.8);
+}
+
+.aboutdiv
+{
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  height: 100%;
+  width: 90%;
+  left: 50%;
+
+  
+}
+
+.aboutdiv p
+{
+  margin: 3px;
+}
+
+.about1
+{
+  position: absolute;
+  top: 50%;
+  left: 0%;
+  height: 100%;
+  width: 50%;
+  transform: translate(0%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  font-size: 140%;
+  
+  
+}
+
+.about2
+{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: 100%;
+  width: 50%;
+  transform: translate(0%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  font-size: 140%;
+  
+}
+
+.aboutdiv img
+{
+  height: 12vh;
+  border-bottom: 2px white solid;
+
+  margin-bottom: 10px;
+  animation: aboutimg 8s linear infinite;
+}
+
+@keyframes aboutimg 
+{
+  0%
+  {
+    padding: 0px 35px 5px 35px;
+  }
+  30%
+  {
+    padding: 0px 55px 5px 55px;
+  }
+  60%
+  {
+    padding: 0px 55px 5px 55px;
+  }
+  90%
+  {
+    padding: 0px 35px 5px 35px;
+  }
+  100%
+  {
+    padding: 0px 35px 5px 35px;
+  }
+}
+
+
 
 
 .gall 
 {
   float: left;
   width: 100%;
-  margin-top: 110vh;
+  margin-top: 60px;
   background-color: red;
-  height: 400px;
+  height: auto;
 
 }
+
+.upgall
+{
+  margin-top: 110vh;
+}
+
+
+@media only screen and (max-width:800px) 
+{
+  
+
+  .aboutdiv img
+{
+  height: 12vh;
+  border-bottom: 2px white solid;
+
+  margin-bottom: 10px;
+}
+
+  .about1
+  {
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    height: 50%;
+    width: 100%;
+    transform: translate(0%, -50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    font-size: 140%;
+    margin-top: 180px;
+    
+  }
+  
+  .about2
+  {
+    position: absolute;
+    top: 50%;
+    left: 0%;
+    height: 50%;
+    width: 100%;
+    transform: translate(0%, -50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    font-size: 140%;
+    margin-top: 140px;
+  }
+  
+
+
+}
+
+.contactdiv
+{
+  top: auto;
+  position: absolute;
+  width: 90%;
+  height: 30vh;
+
+  text-align: center;
+  
+
+}
+.contactdiv p
+{
+  font-size: 30px;
+  text-shadow: 4px 4px 6px rgba(0, 0, 0, 0.8);
+}
+
+.social-btns
+{
+  align-items: center;
+  justify-content: center;
+  display:flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  height: 100px;
+  margin-top: 23px;
+
+  
+}
+
+
+.social-btns a
+{
+  text-decoration: none;
+  font-size: 40px;
+  margin: 5px;
+  border: 2px #ffffff solid;
+  width: 60px;
+  height: 60px;
+  padding: 2px;
+  align-items: center;
+  justify-content: center;
+  display:flex;
+  border-radius: 10px;
+  -webkit-box-shadow: 6px 6px 4px 0px rgba(0, 0, 0, 0.8);
+  -moz-box-shadow: 6px 6px 4px 0px rgba(0, 0, 0, 0.8);
+  box-shadow: 6px 6px 4px 0px rgba(0, 0, 0, 0.8);
+}
+
+.facebook
+{
+  color: #326fff;
+  background-color: #131313;
+  transition: 0.2s all;
+  
+}
+
+.facebook:hover
+{
+  color: white;
+ 
+  background-color: #326fff;;
+}
+
+.instagram
+{
+  background: #131313;
+  color: #bc1888; 
+  transition: 0.2s all;
+  }
+
+  .instagram:hover {
+    background-color: #dc2743;
+    color: white;
+  }
+  
+  .spotify
+  {
+  background: #131313;
+  color: #13dc42; 
+  transition: 0.2s all;
+  }
+
+  .spotify:hover {
+    background-color: #13dc42;
+    color: white;
+  }
+
+  .mail
+  {
+  background: #131313;
+  color: #faaf00; 
+  transition: 0.2s all;
+  }
+
+  .mail:hover {
+    background-color: #faaf00;
+    color: white;
+  }
+  
+
