--- a/assets/style.css
+++ b/assets/style.css
@@ -260,7 +260,10 @@ header
 {
     float: left;
     width: 100%;
-    background-color: rgb(19, 19, 19);
+    background-image: linear-gradient(to bottom, rgba(19, 19, 19, 1), rgba(19, 19, 19, 0), rgba(19, 19, 19, 1)), url(/assets/img/bg2.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     margin-top: 100px;
     height: 70vh;
     overflow-x: hidden;
@@ -273,15 +276,14 @@ header
     position: relative;
     height: 240px ;
     
-    
-	transform: translatey(0px);
-	animation: float 6s ease-in-out infinite/*, border-flicker 2s linear infinite*/;
+    background-color: rgba(19, 19, 19, 0.8);
+	  transform: translatey(0px);
+	  animation: float 6s ease-in-out infinite/*, border-flicker 2s linear infinite*/;
     border-radius: 20px;
   
     color: white;
 
     border: 0.15em solid var(--glow-color);
-    background: none;
 
     -webkit-box-shadow: inset 0px 0px 0.5em 0px var(--glow-color),
     0px 0px 0.5em 0px var(--glow-color), 0 25px 25px 0px rgba(0, 0, 0, 0.6);
@@ -315,7 +317,7 @@ header
 
 
 :root {
-  --glow-color: rgb(37, 137, 251);
+  --glow-color: rgb(255, 193, 22);
 }
 
 
