--- a/assets/style.css
+++ b/assets/style.css
@@ -50,6 +50,15 @@ body
     
 }
 
+#without
+{
+  height: 200px;
+  position: absolute;
+  left: 400%;
+  
+}
+
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 
@@ -648,15 +657,6 @@ p
 
 
 
-.gall 
-{
-  float: left;
-  width: 100%;
-  margin-top: 60px;
-  background-color: red;
-  height: auto;
-
-}
 
 .upgall
 {
@@ -726,11 +726,11 @@ p
 
 .contactdiv
 {
-  top: auto;
-  position: absolute;
+  float: left;
   width: 90%;
   height: 30vh;
-
+  margin-left: 5%;
+  margin-top: 100px;
   text-align: center;
   
 
@@ -826,3 +826,45 @@ p
   }
   
 
+  .gall 
+  {
+    float: left;
+    width: 100%;
+    margin-top: 60px;
+
+    height: auto;
+    text-align: center;
+  
+  }
+  
+
+  .gall img
+  {
+    height: 200px;
+    width: 200px;
+    border: white 1px solid;
+    border-radius: 5px;
+    margin: 5px;
+    border: solid 1px rgb(19, 19, 19);
+    transition: 0.2s all;
+    scale: 1;
+    padding: 1px;
+  }
+
+  .gall img:hover
+  {
+    border: solid 1px white;
+    scale: 1.05;
+  }
+
+.gall p 
+{
+  font-size: 30px;
+
+  margin: 20px;
+}
+
+hr
+{
+  margin-top: 50px;
+}
